--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+   <h1>TIC TAC TOE GAME</h1>
+ </head>
+  <body>
+    <script  type = 'text/javascript' src = 'app.js'></script>
+  </body>
+</html>
 
