[wip] complete setting up tables

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -2,9 +2,34 @@
 <html>
  <head>
    <h1>TIC TAC TOE GAME</h1>
+   <style>
+     table {border: 1px solid black;
+      border-collapse: collapse;}
+     th     {border: 1px solid black;
+      border-collapse: collapse;}
+     td     {border: 1px solid black;
+      border-collapse: collapse;}
+   </style>
  </head>
   <body>
-    <script  type = 'text/javascript' src = 'app.js'></script>
+    <table style="width:100%">
+      <tr>
+        <th id='one'></th>
+        <th id='two'></th>
+        <th id='three'></th>
+      </tr>
+      <tr>
+        <th id='four'></th>
+        <th id='five'></th>
+        <th id='six'></th>
+      </tr>
+      <tr>
+        <th id='seven'></th>
+        <th id='eight'></th>
+        <th id='nine'></th>
+      </tr>
+    </table>
+    <script  type='text/javascript' src='app.js'></script>
   </body>
 </html>
 
