--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
  <head>
-   <h1>TIC TAC TOE GAME</h1>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie-edge">
+   <link rel="stylesheet" href="styles.css">
+   <script src="app.js" defer></script>
+   <title>Document</title>
    <style>
-     table {border: 1px solid black;
-      border-collapse: collapse;}
-     th     {border: 1px solid black;
-      border-collapse: collapse;}
-     td     {border: 1px solid black;
-      border-collapse: collapse;}
+     /* .row {
+      height: 100px;
+     } */
    </style>
  </head>
   <body>
-    <table style="width:100%">
-      <tr>
-        <th id='one'></th>
-        <th id='two'></th>
-        <th id='three'></th>
-      </tr>
-      <tr>
-        <th id='four'></th>
-        <th id='five'></th>
-        <th id='six'></th>
-      </tr>
-      <tr>
-        <th id='seven'></th>
-        <th id='eight'></th>
-        <th id='nine'></th>
-      </tr>
-    </table>
-    <script  type='text/javascript' src='app.js'></script>
+    <div class="myBoard" id="myBoard">
+      <!-- two attributes so we can differentiate between css & javascript -->
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+    </div>
+    <div class="winningMsg" id="winningMsg">
+      <div data-winningMsg-text></div>
+      <button id='buttonRestart'>Restart?</button>
+    </div>
+
+   
   </body>
 </html>
 
