complete tic tac toe app

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -27,11 +27,12 @@
       <div class="cell" data-cell></div>
     </div>
     <div class="winningMsg" id="winningMsg">
+      <!-- use this later in javascript -->
       <div data-winningMsg-text></div>
       <button id='buttonRestart'>Restart?</button>
     </div>
 
-   
+
   </body>
 </html>
 
