complete creating html page with live server

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <h1>CSV Report</h1>
+    <p>use live server</p>
+  </body>
+</html>
 
