complete setting up working server

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -3,8 +3,13 @@
   <head>
   </head>
   <body>
-    <h1>CSV Report</h1>
-    <p>use live server</p>
+    need action attribute to specify where form is submitting to
+    <form action="">
+      <label>Input Data Here</label>
+      <!-- input lets user input data -->
+      <input>
+      <button>Submit</button>
+    </form>
   </body>
 </html>
 
