--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -4,10 +4,11 @@
   </head>
   <body>
     <!-- dont think u need action attribute because you're subbmitting to same page -->
-    <form  action='/' method='POST'>
-      <label>Input Data Here</label>
+    <!-- action='/index.html' -->
+    <form method='POST'>
+      <h1>Insert Message</h1>
       <!-- input lets user input data -->
-      <textarea name='message' id='message'></textarea>
+      <textarea name='message' id='message' cols="100" rows="40"></textarea>
         <!-- <input type='text'> -->
         <input type='submit' value='submit'>
 
