--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>    <title>      React Mini App    </title>
+  </head>
+  <body>
+ <p>hello</p>
+    <script src='./app.js'></script>
+  </body>
+</html>
 
 
