--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>    <title>      React Mini App    </title>
-  </head>
-  <body>
- <p>hello</p>
- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 
-<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src='./app.js'></script>
-  </body>
+<head>
+  <title> React Mini App </title>
+</head>
+
+<body>
+  <h1>Multistep Checkout</h1>
+  <form method='POST'>
+    <input type='submit' value='checkout'>
+  </form>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script type='module' src='./app.js'></script>
+</body>
+
 </html>
-
-
