--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -6,13 +6,15 @@
 </head>
 
 <body>
+  <div id='app'>
   <h1>Multistep Checkout</h1>
   <form method='POST'>
     <input type='submit' value='checkout'>
   </form>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script type='module' src='./app.js' id='app'></script>
+  <script type='module' src='./app.js'></script>
+  </div>
 </body>
 
 </html>
